--- a/settings.gradle
+++ b/settings.gradle
@@ -17,3 +17,5 @@ include ':app'
 include ':l01lab_test'
 include ':l01lab_currencyConverter'
 include ':l02lab_listEmployees'
+include ':l03lab_sunrise'
+include ':l03lab_nfs'
